--- a/prepros.config
+++ b/prepros.config
@@ -67,7 +67,18 @@
           "*.coffee",
           "*.kit",
           "*.turf",
-          "*.ts"
+          "*.ts",
+          "/foto_for_contacts\\флаги\\China.jpg",
+          "/foto_for_contacts\\флаги\\Ukraine.png",
+          "/foto_for_contacts\\флаги\\farance.jpg",
+          "/foto_for_contacts\\флаги\\rassin.png",
+          "/foto_for_contacts\\флаги\\usa.jpg",
+          "/foto_for_contacts\\флаги\\China.jpg",
+          "/foto_for_contacts\\флаги\\Ukraine.png",
+          "/foto_for_contacts\\флаги\\farance.jpg",
+          "/foto_for_contacts\\флаги\\rassin.png",
+          "/foto_for_contacts\\флаги\\usa.jpg",
+          "/foto_for_contacts\\флаги"
         ],
         "exceptions": []
       }
