--- a/prepros.config
+++ b/prepros.config
@@ -95,7 +95,8 @@
         "flexbox": true,
         "grid": "autoplace",
         "browsers": [
-          "last 2 versions"
+          "> 2%",
+          "not dead"
         ],
         "sourceMap": false
       },
@@ -106,7 +107,8 @@
             "enable": true,
             "options": {
               "targets": [
-                "last 2 versions"
+                "> 2%",
+                "not dead"
               ],
               "preserveImports": false,
               "polyfills": false
@@ -154,7 +156,8 @@
                 "enable": true,
                 "options": {
                   "targets": [
-                    "last 2 versions"
+                    "> 2%",
+                    "not dead"
                   ],
                   "preserveImports": false,
                   "polyfills": false
@@ -362,7 +365,8 @@
       "postcss-preset-env": {
         "stage": 2,
         "browsers": [
-          "last 2 versions"
+          "> 2%",
+          "not dead"
         ],
         "sourceMap": false
       },
