--- a/prepros.config
+++ b/prepros.config
@@ -67,18 +67,7 @@
           "*.coffee",
           "*.kit",
           "*.turf",
-          "*.ts",
-          "/foto_for_contacts\\флаги\\China.jpg",
-          "/foto_for_contacts\\флаги\\Ukraine.png",
-          "/foto_for_contacts\\флаги\\farance.jpg",
-          "/foto_for_contacts\\флаги\\rassin.png",
-          "/foto_for_contacts\\флаги\\usa.jpg",
-          "/foto_for_contacts\\флаги\\China.jpg",
-          "/foto_for_contacts\\флаги\\Ukraine.png",
-          "/foto_for_contacts\\флаги\\farance.jpg",
-          "/foto_for_contacts\\флаги\\rassin.png",
-          "/foto_for_contacts\\флаги\\usa.jpg",
-          "/foto_for_contacts\\флаги"
+          "*.ts"
         ],
         "exceptions": []
       }
@@ -106,8 +95,7 @@
         "flexbox": true,
         "grid": "autoplace",
         "browsers": [
-          "> 2%",
-          "not dead"
+          "last 2 versions"
         ],
         "sourceMap": false
       },
@@ -118,8 +106,7 @@
             "enable": true,
             "options": {
               "targets": [
-                "> 2%",
-                "not dead"
+                "last 2 versions"
               ],
               "preserveImports": false,
               "polyfills": false
@@ -167,8 +154,7 @@
                 "enable": true,
                 "options": {
                   "targets": [
-                    "> 2%",
-                    "not dead"
+                    "last 2 versions"
                   ],
                   "preserveImports": false,
                   "polyfills": false
@@ -376,8 +362,7 @@
       "postcss-preset-env": {
         "stage": 2,
         "browsers": [
-          "> 2%",
-          "not dead"
+          "last 2 versions"
         ],
         "sourceMap": false
       },
